added some features

--- a/public/AppsData.json
+++ b/public/AppsData.json
@@ -1,10 +1,10 @@
 [
   {
     "image": "https://i.ibb.co.com/1Y2gc4Rw/Screenshot-2025-10-08-091524.png",
-    "title": "TaskFlow",
+    "title": "TaskFlow: ToDo List with Reminder",
     "companyName": "NovaSoft Ltd.",
     "id": 1,
-    "description": "A smart task management app that helps teams collaborate and track progress effortlessly.",
+    "description": "This powerful app takes task management to the next level, offering a complete environment for deep work and team collaboration. Minimize distractions and maximize productivity by using customizable task lists, deadline reminders, and smart priority features. A unique feature is the integrated team sync, which allows effortless assignment and tracking of tasks among members. Detailed analytics show not just *what* was completed, but *who* contributed and where time was spent, helping your team adjust its workflow for peak efficiency.",
     "size": 45,
     "reviews": 1250,
     "ratingAvg": 4.6,
@@ -19,10 +19,10 @@
   },
   {
     "image": "https://i.ibb.co.com/vv3qrrzK/Screenshot-2025-10-08-093229.png",
-    "title": "PhotoLab Pro",
+    "title": "PhotoLab Pro: AI Photo Editor",
     "companyName": "PixelMinds Studio",
     "id": 2,
-    "description": "Edit and enhance your photos with AI-powered filters, effects, and retouch tools.",
+    "description": "Unleash your creativity with PhotoLab Pro, the AI Photo Editor that brings professional-grade tools to your fingertips. Go beyond simple filters with AI-powered effects and retouching capabilities that minimize tedious work and maximize visual impact. Users can access custom presets and layers, track their edit history, and review detailed data on color grading over time. A core feature is the integrated AI-assist for object removal and background manipulation, making complex edits simple and quick.",
     "size": 82,
     "reviews": 4200,
     "ratingAvg": 4.3,
@@ -37,10 +37,10 @@
   },
   {
     "image": "https://i.ibb.co.com/RGM6wmhv/demo-app-2.webp",
-    "title": "FitTrack",
+    "title": "FitTrack: Fitness & Workout Tracker",
     "companyName": "ActiveMind Tech",
     "id": 3,
-    "description": "Your personal fitness tracker that monitors workouts, calories, and daily progress.",
+    "description": "FitTrack acts as your personal fitness coach, moving beyond simple step counting to provide a comprehensive environment for tracking your health goals. Minimize guesswork and maximize results with customizable workout plans, calorie tracking, and real-time biometric monitoring. A unique feature is the automatic integration with gym equipment and wearable tech, tracking every session seamlessly. Built-in analytics provide detailed statistics on weekly progress, burned calories, and sleep quality, helping you adjust your routine for optimal health.",
     "size": 63,
     "reviews": 2300,
     "ratingAvg": 4.8,
@@ -55,10 +55,10 @@
   },
   {
     "image": "https://i.ibb.co.com/tMNhnVjG/Screenshot-2025-10-08-093423.png",
-    "title": "MusicWave",
+    "title": "MusicWave: Stream & Discover Music",
     "companyName": "EchoVerse Labs",
     "id": 4,
-    "description": "Stream your favorite music with personalized playlists and offline mode.",
+    "description": "Dive into MusicWave, the streaming app designed for personalized music discovery. It goes beyond simple playback, creating a complete environment for finding new artists and curating playlists. Minimize searching and maximize enjoyment with AI-powered recommendations and offline download options. A unique feature is the integrated social component, letting you share and collaborate on playlists in real-time. Detailed listening analytics show your genre distribution and favorite tracks over time, refining your music journey.",
     "size": 90,
     "reviews": 5400,
     "ratingAvg": 4.5,
@@ -73,10 +73,10 @@
   },
   {
     "image": "https://i.ibb.co.com/LDr1m76t/Screenshot-2025-10-08-093740.png",
-    "title": "NoteSync",
+    "title": "NoteSync: Cloud Notes & Voice Memo",
     "companyName": "CloudBox Inc.",
     "id": 5,
-    "description": "Sync your notes across devices with encryption and voice-to-text support.",
+    "description": "NoteSync is the ultimate tool for capturing ideas instantly and keeping them organized. This app creates a secure, cross-device environment for note-taking. Minimize lost ideas and maximize organization with cloud sync and powerful search functions. A unique feature is the built-in voice-to-text conversion, allowing you to speak your notes directly into the app. Encryption ensures your sensitive data is always secure, giving you a seamless, distraction-free way to document your thoughts.",
     "size": 28,
     "reviews": 1900,
     "ratingAvg": 4.2,
@@ -91,10 +91,10 @@
   },
   {
     "image": "https://i.ibb.co.com/gLbtMpdt/demo-app-6.webp",
-    "title": "BudgetBee",
+    "title": "BudgetBee: Smart Expense Tracker",
     "companyName": "FinGrow Solutions",
     "id": 6,
-    "description": "Easily manage your expenses and track your financial goals with smart insights.",
+    "description": "BudgetBee helps you master your money with an intelligent, goal-oriented environment for financial tracking. Minimize financial stress and maximize savings with categorized expense logging, custom budgets, and automated bill reminders. A unique feature is the ability to connect securely to your bank for real-time transaction updates. Detailed financial insights and visual reports show where your money is going and help you adjust your spending habits to reach your long-term goals.",
     "size": 51,
     "reviews": 2750,
     "ratingAvg": 4.7,
@@ -108,11 +108,11 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/W4S4ypKG/Screenshot-2025-10-08-091013.png",
-    "title": "StudyMate",
+    "image": "https://i.ibb.co.com/6cgcZMWt/Screenshot-2025-10-08-191029.png",
+    "title": "StudyMate: AI Study Assistant",
     "companyName": "Learnify Labs",
     "id": 7,
-    "description": "An AI-powered study assistant that helps students plan, revise, and stay productive.",
+    "description": "StudyMate creates the ultimate environment for focused learning, powered by Artificial Intelligence. Minimize procrastination and maximize knowledge retention with personalized study schedules, revision plans, and AI-generated quizzes. A unique feature is the AI chat assistant, which clarifies complex topics and provides tailored explanations. Built-in analytics track your mastery level in each subject and adapt the learning materials accordingly, ensuring your study time is always productive and effective.",
     "size": 64,
     "reviews": 3100,
     "ratingAvg": 4.9,
@@ -127,10 +127,10 @@
   },
   {
     "image": "https://i.ibb.co.com/G4pgcWtf/Screenshot-2025-10-08-093924.png",
-    "title": "Weatherly",
+    "title": "Weatherly: Live Weather Forecast",
     "companyName": "SkySense Co.",
     "id": 8,
-    "description": "Get accurate weather forecasts with live radar maps and smart alerts.",
+    "description": "Weatherly provides a complete, hyper-local environment for tracking atmospheric conditions. Minimize surprises and maximize planning with live radar maps, accurate hourly forecasts, and severe weather alerts. A unique feature is the customizable widget that displays precipitation and temperature changes for the next 60 minutes. The simple, minimal design ensures you get the critical weather data instantly, helping you maintain a healthy rhythm between indoor and outdoor activities.",
     "size": 37,
     "reviews": 2100,
     "ratingAvg": 4.4,
@@ -145,10 +145,10 @@
   },
   {
     "image": "https://i.ibb.co.com/Mkvx2FL7/Screenshot-2025-10-08-094059.png",
-    "title": "TimePro",
+    "title": "TimePro: Work Hours Tracker",
     "companyName": "ChronoWare",
     "id": 9,
-    "description": "A professional time-tracking tool for freelancers and small teams.",
+    "description": "TimePro is the professional-grade app for precise time tracking and project billing. This app provides a transparent environment for monitoring billable hours. Minimize manual logging errors and maximize payroll accuracy with automated timers and project categorization. A unique feature is the integrated invoicing tool, which generates detailed reports directly from your tracked hours. Built-in analytics track time spent per client and project profitability, helping freelancers and small teams manage their work smarter.",
     "size": 40,
     "reviews": 1500,
     "ratingAvg": 4.1,
@@ -162,11 +162,11 @@
     ]
   },
   {
-    "image": "https://i.ibb.co.com/zhDnvJL5/Screenshot-2025-10-08-091325.png",
-    "title": "MindEase",
+    "image": "https://i.ibb.co.com/Jj4nJNN8/Screenshot-2025-10-08-190637.png",
+    "title": "MindEase: Meditation & Relaxation",
     "companyName": "Calmify Studio",
     "id": 10,
-    "description": "Relax your mind with guided meditation, music, and mindfulness exercises.",
+    "description": "MindEase creates a complete, peaceful environment for mental relaxation and mindfulness. Minimize daily stress and maximize inner calm with guided meditation sessions, soothing background sounds, and breathing exercises. A unique feature is the adaptive session length, which adjusts to fit even the busiest schedules. Detailed usage statistics track your mindfulness streaks and favorite sessions over time, helping you maintain a healthy rhythm between activity and rest.",
     "size": 53,
     "reviews": 5000,
     "ratingAvg": 4.8,
@@ -181,10 +181,10 @@
   },
   {
     "image": "https://i.ibb.co.com/1VLf5R0/Screenshot-2025-10-08-094414.png",
-    "title": "ShopSmart",
+    "title": "ShopSmart: Online Price Tracker",
     "companyName": "Dealify Inc.",
     "id": 11,
-    "description": "Compare prices, track discounts, and save money on online shopping.",
+    "description": "ShopSmart turns online shopping into an intelligent, money-saving exercise. This app provides a complete environment for smart price tracking. Minimize overpaying and maximize savings with automatic price monitoring across multiple e-commerce sites and instant discount alerts. A unique feature is the price history chart, showing you the item's lowest price over the past year. Detailed analytics track your spending and savings, ensuring you make every purchase smartly.",
     "size": 78,
     "reviews": 4000,
     "ratingAvg": 4.3,
@@ -199,10 +199,10 @@
   },
   {
     "image": "https://i.ibb.co.com/chBf4HDs/Screenshot-2025-10-08-092036.png",
-    "title": "LangBuddy",
+    "title": "LangBuddy: AI Language Tutor",
     "companyName": "PolyLingua",
     "id": 12,
-    "description": "Learn new languages with AI chat partners and interactive lessons.",
+    "description": "LangBuddy is your personal AI language tutor, offering a complete and immersive environment for mastering a new tongue. Minimize classroom fees and maximize speaking confidence with AI chat partners for real-time conversation practice. A unique feature is the personalized lesson path that adapts based on your fluency progress and weaknesses. Built-in analytics track your vocabulary growth and pronunciation accuracy, ensuring your learning journey is always customized and effective.",
     "size": 70,
     "reviews": 2700,
     "ratingAvg": 4.7,
@@ -217,10 +217,10 @@
   },
   {
     "image": "https://i.ibb.co.com/XZ36nH4h/Screenshot-2025-10-08-094613.png",
-    "title": "DriveSafe",
+    "title": "DriveSafe: Smart Driving Tracker",
     "companyName": "AutoSense Labs",
     "id": 13,
-    "description": "Monitor your driving habits and get insights for safer journeys.",
+    "description": "DriveSafe creates an active monitoring environment for safer, smarter driving. Minimize risky habits and maximize fuel efficiency with real-time feedback on acceleration, braking, and cornering. A unique feature is the incident detection system, which automatically logs hard stops or speeding events. Detailed driving statistics provide historical data on trip duration and behavior scores, helping you refine your driving for personal safety and lower insurance costs.",
     "size": 65,
     "reviews": 1300,
     "ratingAvg": 4.2,
@@ -235,10 +235,10 @@
   },
   {
     "image": "https://i.ibb.co.com/b5Qmb8qZ/Screenshot-2025-10-08-091725.png",
-    "title": "CookBook+",
+    "title": "CookBook+: Recipes & Videos",
     "companyName": "YummyBits Co.",
     "id": 14,
-    "description": "Discover and share recipes from around the world with step-by-step videos.",
+    "description": "CookBook+ is your complete digital kitchen environment, moving beyond static recipes. Minimize kitchen confusion and maximize culinary success with step-by-step video guides, integrated shopping lists, and smart ingredient substitution suggestions. A unique feature is the user-generated content platform, letting you discover and share recipes from home cooks worldwide. Built-in progress tracking helps you save your favorite recipes and plan meals for the week effortlessly.",
     "size": 77,
     "reviews": 3600,
     "ratingAvg": 4.6,
@@ -253,10 +253,10 @@
   },
   {
     "image": "https://i.ibb.co.com/zHFjbbVc/Screenshot-2025-10-08-092246.png",
-    "title": "SecureVault",
+    "title": "SecureVault: Password Manager",
     "companyName": "SafeLock Systems",
     "id": 15,
-    "description": "Keep your passwords and sensitive files secure with military-grade encryption.",
+    "description": "SecureVault creates a complete, encrypted environment for managing all your digital credentials. Minimize the risk of breaches and maximize security with military-grade encryption, two-factor authentication, and a built-in password generator. A unique feature is the dark web monitoring service that alerts you if your stored credentials are found in a data leak. The seamless autofill feature ensures you can log in quickly while maintaining uncompromised security.",
     "size": 42,
     "reviews": 2900,
     "ratingAvg": 4.9,
@@ -269,13 +269,12 @@
       { "name": "5 star", "count": 2400 }
     ]
   },
-  
   {
     "image": "https://i.ibb.co.com/N2TbgKcZ/Screenshot-2025-10-08-094845.png",
-    "title": "HealthPal",
+    "title": "HealthPal: Fitness & Wellness Tracker",
     "companyName": "WellnessTech",
     "id": 16,
-    "description": "Track your health metrics, set fitness goals, and get personalized insights.",
+    "description": "HealthPal offers a personalized environment for tracking every aspect of your wellness journey. Minimize health guesswork and maximize proactive care with custom goal setting for steps, sleep, and hydration. A unique feature is the integrated symptom checker that uses AI to provide initial health insights. Detailed reports visualize your health metrics over time and suggest micro-adjustments to your lifestyle for long-term well-being.",
     "size": 60,
     "reviews": 1800,
     "ratingAvg": 4.6,
@@ -290,10 +289,10 @@
   },
   {
     "image": "https://i.ibb.co.com/twxpfdB7/Screenshot-2025-10-08-095033.png",
-    "title": "TravelMate",
+    "title": "TravelMate: Trip Planner & Guide",
     "companyName": "Wanderlust Corp",
     "id": 17,
-    "description": "Plan trips, discover attractions, and manage bookings all in one app.",
+    "description": "TravelMate is your all-in-one environment for planning, booking, and managing every trip detail. Minimize travel stress and maximize adventure with automated itinerary creation, flight/hotel trackers, and currency conversion. A unique feature is the comprehensive offline guide for popular destinations, including local maps and points of interest. It keeps all your bookings and documents in one secure, accessible location, ensuring a smooth journey from start to finish.",
     "size": 85,
     "reviews": 2500,
     "ratingAvg": 4.7,
@@ -308,10 +307,10 @@
   },
   {
     "image": "https://i.ibb.co.com/WWnBk6wr/Screenshot-2025-10-08-095248.png",
-    "title": "FoodieFun",
+    "title": "FoodieFun: Cooking & Recipe Hub",
     "companyName": "YumJoy Ltd.",
     "id": 18,
-    "description": "Discover recipes, watch cooking videos, and share your own culinary creations.",
+    "description": "FoodieFun is the dynamic hub for culinary creativity, offering a social environment for food enthusiasts. Minimize boredom and maximize flavor discovery with personalized recipe recommendations and short-form cooking videos. A unique feature is the ability to connect with other home cooks, share your creations, and participate in weekly cooking challenges. Detailed metrics track your cooking history and preferred cuisines, ensuring you always find something delicious to try.",
     "size": 72,
     "reviews": 2100,
     "ratingAvg": 4.5,
@@ -326,10 +325,10 @@
   },
   {
     "image": "https://i.ibb.co.com/bMC7vf0V/Screenshot-2025-10-08-095439.png",
-    "title": "LearnHub",
+    "title": "LearnHub: Online Learning Platform",
     "companyName": "EduVerse",
     "id": 19,
-    "description": "Access online courses, practice quizzes, and track your learning progress.",
+    "description": "LearnHub provides a comprehensive environment for continuous online education. Minimize time waste and maximize skill development with access to diverse courses, interactive quizzes, and personalized learning pathways. A unique feature is the built-in peer support network and discussion forums for collaborative learning. Detailed progress tracking monitors your completion rate and knowledge retention, helping you stay disciplined and on track to achieve your academic goals.",
     "size": 95,
     "reviews": 3300,
     "ratingAvg": 4.8,
@@ -344,10 +343,10 @@
   },
   {
     "image": "https://i.ibb.co.com/XfwXJQkN/Screenshot-2025-10-08-095610.png",
-    "title": "SafeHome",
+    "title": "SafeHome: Smart Home Security",
     "companyName": "SecureTech Inc.",
     "id": 20,
-    "description": "Monitor your home security system, get alerts, and control smart devices remotely.",
+    "description": "SafeHome creates a complete, real-time environment for securing and controlling your smart devices. Minimize security anxiety and maximize peace of mind with instant alerts, remote access control, and motion detection logs. A unique feature is the centralized dashboard that monitors all connected devices and their battery health. It acts as a digital guardian for your house, keeping everything connected, monitored, and protected throughout the day.",
     "size": 58,
     "reviews": 2700,
     "ratingAvg": 4.7,
@@ -360,5 +359,4 @@
       { "name": "5 star", "count": 1570 }
     ]
   }
-
 ]
